# aria-code

./: .env.daemon.template  .env.example  .gitignore  ARIA.md  CHANGELOG.md  CLA.md  CLOSING_SOURCE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  Dockerfile.relay  LICENSE  PRIVACY.md  PROJECT_CONTEXT.md  README.md  README_CN.md  SECURITY.md  aliyun_data_client.py  aria-code  aria_cli.py  aria_daemon.py  aria_feishu_bot.py  aria_relay_client.py  aria_relay_server.py  aria_telegram_bot.py  ariarc.py  artifacts.py  backtest_engine.py  backtest_report.py  bootstrap.sh  change_store.py  command_safety.py  computer_use_tools.py  dashboard_generator.py  data_analysis_tools.py  data_cleaner.py  data_service.py  demo.tape  demo_player.py  docker-compose.yml  (+27 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  test.yml
agents/: __init__.py  base.py  portfolio_agent.py  registry.py  team.py
agents/deep/: __init__.py  calibration_loop.py  critic.py  deepen.py  models.py  pipeline.py  quant_fusion.py  themes.py  tiers.py
agents/financial/: __init__.py  catalyst.py  debate.py  earnings.py  fundamental.py  macro.py  news.py  risk.py  sector.py  synthesis.py  technical.py
agents/realty/: __init__.py  asset_diagnosis.py  business_match.py  cashflow_verify.py  contract_rules.py  energy_anomaly.py  exit_settlement.py  fulfillment_risk.py  ops_optimize.py  revenue_share.py
agents/sports/: football_agent.py
apps/: README.md  __init__.py
apps/channels/: README.md
apps/cli/: README.md  __init__.py  bootstrap.py  codegen_paths.py  config_paths.py  config_store.py  deterministic.py  direct.py  github_app_auth.py  hooks.py  i18n.py  intent.py  intent_router.py  lifecycle_hooks.py  main.py  market_metadata.py  market_universe.py  message_processing.py  plan_mode.py  plotly_html.py  prediction_feedback.py  preflight.py  project_aria.py  prompt_assembly.py  runtime_consumer.py  session_export.py  session_jsonl.py  session_store.py  todo_tracker.py  tradingview_bridge.py  turn_planning.py  update_check.py
apps/cli/commands/: __init__.py  analysis_cmds.py  auth_cmds.py  backtest_cmds.py  broker_cmds.py  business_workflow_cmds.py  catalog.py  data_cmds.py  diagnostic_cmds.py  diagnostic_ops_cmds.py  file_cmds.py  finance_render.py  fx_commodity_cmds.py  market.py  market_cmds.py  market_context.py  market_render.py  model_cmds.py  ops_cmds.py  portfolio_cmds.py  report.py  scaffold_templates.py  session_cmds.py  session_ux_cmds.py  team.py  team_render.py  ui_cmds.py  workflow_cmds.py  workspace_cmds.py
apps/cli/handlers/: __init__.py  broker_handlers.py  chart_handlers.py  market_handlers.py  realty_handlers.py  strategy_advice.py
apps/cli/prompts/: coding.py  system_prompts.py  ui.py
apps/cli/providers/: __init__.py  base.py  chat_routing.py  runtime_bridge.py
apps/cli/tools/: __init__.py  context.py  file_tools.py  market_tools.py  notebook_tools.py  system_tools.py  write_tools.py
apps/cli/utils/: market_detect.py
apps/daemon/: README.md
apps/vscode/: README.md  extension.js  package.json
brokers/: __init__.py  automation.py  base.py  capabilities.py  config.py  paper_broker.py  planning.py  registry.py  trading.py
brokers/cn/: __init__.py  easytrader_broker.py  futu_broker.py  longbridge_broker.py  tiger_broker.py  xtquant_broker.py
brokers/intl/: __init__.py  alpaca_broker.py  ibkr_broker.py  webull_broker.py
config/: datasources.example.yaml  mcp_servers.example.json  providers.example.yaml
datasources/: __init__.py  base.py  router.py
datasources/sources/: __init__.py  akshare_source.py  alpha_vantage_source.py  edgar_source.py  finnhub_source.py  fred_source.py  tushare_source.py  web_scraper_source.py  world_bank_source.py  yfinance_source.py
docs/: architecture.md  strategy_workspace.md
docs/architecture/: claude_code_parity_gap_analysis.md  packages_integration.md  service_boundaries.md  tradingview_integration.md
docs/operations/: github_enterprise_migration.md
examples/: README.md
npm/: .npmignore  package.json
npm/lib/: paths.js
npm/scripts/: postinstall.js
npm/tests/: paths.test.js
plugins/: README.md
plugins/market-analysis/: README.md
plugins/quant-strategy/: README.md
privacy/: __init__.py  feedback.py
providers/: __init__.py
providers/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai_compat.py  registry.py
runtime/: __init__.py  agent_loop.py  approval.py  events.py  gateway.py  lsp.py  subagent.py  tool_executor.py  tool_policy.py
safety/: __init__.py  permissions.py
scripts/: bump_version.py  github_migration_preflight.py
tests/: conftest.py  test_agent_team_fallback.py  test_analyze_file_tool.py  test_architecture_report.py  test_aria_cli_core.py  test_aria_sdk.py  test_artifacts_and_reports.py  test_backtest_cmds.py  test_backtest_engine.py  test_backtest_report.py  test_broker_automation.py  test_broker_planning.py  test_broker_safety.py  test_business_workflow_cmds.py  test_chart_handlers.py  test_chat_routing.py  test_cli_app_split.py  test_cli_bootstrap.py  test_cli_config_store.py  test_cli_lifecycle_hooks.py  test_cli_runtime_consumer.py  test_codegen_output.py  test_command_safety.py  test_completions_builder.py  test_config_paths.py  test_configured_provider.py  test_context_references.py  test_context_service.py  test_dashboard_generator.py  test_data_service.py  test_deep_analysis.py  test_doctor.py  test_finance_renderers.py  test_financial_agents_output.py  test_football_prediction_output.py  test_image_inputs.py  test_intent_router.py  test_licensing.py  test_lsp.py  test_market_data_client.py  (+45 more)
tests/e2e/: conftest.py  test_provider_e2e.py
tools/: build_quant_engine.py
ui/: __init__.py  banner.py  completer.py  console.py  image_render.py  input_box.py  picker.py  robot.py  startup_dashboard.py
ui/render/: __init__.py  finance.py  market.py  output.py  team.py
workspace/: __init__.py  files.py  verify.py
(+7 files in other folders)
